# simpl_eeg_capstone

./: .buildinfo  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Makefile  README.Rmd  README.md  api.html  clustering.html  clustering_HMM.html  clustering_kmeans.html  connectivity.html  eeg_objects.html  genindex.html  index.html  install.sh  installation.html  introduction.html  objects.inv  py-modindex.html  pyproject.toml  raw_voltage.html  search.html  searchindex.js  setup.py  simpl_eeg.yaml  topo_2d.html  topo_3d_brain.html  topo_3d_head.html  user_interface.html
.github/workflows/: build.yml
_sources/: clustering.ipynb  clustering_HMM.ipynb  clustering_kmeans.ipynb  connectivity.ipynb  eeg_objects.ipynb  installation.md  introduction.ipynb  raw_voltage.ipynb  topo_2d.ipynb  topo_3d_brain.ipynb  topo_3d_head.ipynb  user_interface.ipynb
data_exploration/: Connectivity_test.ipynb  MNE_test.ipynb  interpolation.ipynb  node_interpolation.ipynb  package.ipynb  proof_of_concept.ipynb  proposal.ipynb  test_3d_plot.ipynb
docs/: Makefile  _config.yml  index.html  make.bat
docs/_posts/: 2021-05-04-agenda.md  2021-05-04-minutes.md  2021-05-11-agenda.md  2021-05-11-minutes.md  2021-05-18-agenda.md  2021-05-18-minutes.md  2021-05-25-agenda.md  2021-05-25-meeting.md  2021-05-25-minutes.md  2021-06-01-agenda.md  2021-06-01-minutes.md  2021-06-08-agenda.md  2021-06-08-minutes.md
docs/meetings/: may_4_minutes.md
docs/minutes/: index.html
docs/simpl_instructions/: _config.yml  _toc.yml  api.rst  clustering.ipynb  clustering_HMM.ipynb  connectivity.ipynb  eeg_objects.ipynb  installation.md  introduction.ipynb  raw_voltage.ipynb  references.bib  topo_2d.ipynb  topo_3d_brain.ipynb  topo_3d_head.ipynb  user_interface.ipynb
docs/source/: conf.py  index.rst  installation.rst  usage.ipynb
eeg/: connectivity.py  topomap_3d_head.py
notebook/: instructions.ipynb
reports/: Final_Report.Rmd  Proposal.Rmd  Proposal.md  References.bib  TimelineGanttChart.xlsx  generate_figures.py  proposal.md
reports/images/: TimelineGanttChart.xlsx
simpl_eeg/: connectivity.py  eeg_objects.py  raw_voltage.py  topomap_2d.py  topomap_3d_brain.py  topomap_3d_head.py
simpl_instructions/: _config.yml  _toc.yml  connectivity.ipynb  installation.md  instructions.ipynb  introduction.ipynb  raw_voltage.ipynb  topo_2d.ipynb  topo_3d_brain.ipynb  topo_3d_head.ipynb
src/: app.py  connectivity.py  raw_voltage.py  topomap_2d.py  topomap_3d_brain.py  topomap_3d_head.py
src/eeg/: eeg.py  (+4 more)
test_data/: test_data.pkl  test_data1.pkl
tests/: test_connectivity.py  test_eeg.py  test_eeg_objects.py  test_raw_voltage.py  test_topomap_2d.py  test_topomap_3d_brain.py  test_topomap_3d_head.py
(+114 files in other folders)
